chore: README for Minesweeper project
Updated README to enhance project details and structure.